<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/xml_menu"
        android:title="@string/xml_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/font_size_menu_item"
                android:title="@string/font_size"
                app:showAsAction="ifRoom|withText">
                <menu>
                    <item
                        android:id="@+id/font_size_big_menu_item"
                        android:title="@string/font_size_big"
                        app:showAsAction="ifRoom|withText"></item>
                    <item
                        android:id="@+id/font_size_middle_menu_item"
                        android:title="@string/font_size_middle"
                        app:showAsAction="ifRoom|withText"></item>
                    <item
                        android:id="@+id/font_size_small_menu_item"
                        android:title="@string/font_size_small"
                        app:showAsAction="ifRoom|withText"></item>
                </menu>
            </item>

            <item
                android:id="@+id/common_menu_menu_item"
                android:title="@string/common_menu"
                app:showAsAction="ifRoom|withText"></item>
            <item
                android:id="@+id/font_color_menu_item"
                android:title="@string/font_color"
                app:showAsAction="ifRoom|withText">


                <menu>
                    <item
                        android:id="@+id/font_color_red_menu_item"
                        android:title="@string/font_color_red"
                        app:showAsAction="ifRoom|withText"></item>
                    <item
                        android:id="@+id/font_color_black_menu_item"
                        android:title="@string/font_color_black"
                        app:showAsAction="ifRoom|withText"></item>
                </menu>


            </item>

            <item
                android:id="@+id/exit_menu_item"
                android:title="@string/exit_app"
                app:showAsAction="ifRoom|withText"></item>

        </menu>
    </item>
</menu>