<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnToListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnToListView" />

    <Button
        android:id="@+id/btnToAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnToAlertDialog" />

    <Button
        android:id="@+id/btnToMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnToMenu" />

    <Button
        android:id="@+id/btnToContextMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnToContextMenu" />

</LinearLayout>